--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility which can be used to manipulate your text in the way you want."
+      content="TextUtils is a word counter and character counter utility which can be used to manipulate your text in the way you want.
+              You can remove extra spaces and convet text from lower cases to upper cases and upper cases to lower cases."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
@@ -29,8 +30,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
 
-
-    <title>TextUtils -  Home</title>
+ 
+    <title>TextUtils - Word counter | Character counter | lowercase to uppercase | uppercase to lowercase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
